[gd_scene load_steps=26 format=2]

[ext_resource path="res://Important_Scenes/Characters/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Image_Assets/Player_Assets/Lilith_Sprite_Sheet.png" type="Texture" id=2]
[ext_resource path="res://Important_Scenes/Characters/Player/Lilith.gd" type="Script" id=4]
[ext_resource path="res://Important_Scenes/Characters/Player/PLAYERSTATEMACHINE.gd" type="Script" id=5]
[ext_resource path="res://Assets/Image_Assets/World/light.png" type="Texture" id=6]
[ext_resource path="res://Important_Scenes/Reusable/Hitbox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Important_Scenes/Reusable/Hurtbox.tscn" type="PackedScene" id=8]
[ext_resource path="res://Important_Scenes/Characters/Player/Lilith_Hitbox.gd" type="Script" id=9]
[ext_resource path="res://Important_Scenes/Reusable/pauseMenu.tscn" type="PackedScene" id=10]
[ext_resource path="res://Important_Scenes/Characters/Player/HealthBar.tscn" type="PackedScene" id=11]
[ext_resource path="res://Important_Scenes/Characters/Player/Player_Stats.tscn" type="PackedScene" id=12]

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 512, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 576, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 640, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 704, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 768, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 832, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=30]
animations = [ {
"frames": [ SubResource( 37 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ) ],
"loop": true,
"name": "move",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=36]
extents = Vector2( 5, 1 )

[sub_resource type="Animation" id=31]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=32]
resource_name = "idle"
length = 0.0833333
loop = true
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=33]
resource_name = "move"
length = 0.5
loop = true
step = 0.0833333
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "move" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="CircleShape2D" id=34]
radius = 22.0907

[sub_resource type="CircleShape2D" id=35]
radius = 7.0

[node name="Lilith" groups=["Player"] instance=ExtResource( 1 )]
z_index = 3
collision_layer = 2
collision_mask = 5
script = ExtResource( 4 )
acceleration = 150
max_speed = 400

[node name="AnimatedSprite" parent="." index="0"]
frames = SubResource( 30 )
animation = "idle"

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 0, 3 )
shape = SubResource( 36 )

[node name="AnimationPlayer" parent="." index="2"]
anims/RESET = SubResource( 31 )
anims/idle = SubResource( 32 )
anims/move = SubResource( 33 )

[node name="Node" parent="." index="3"]
script = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="." index="4"]
current = true
zoom = Vector2( 0.8, 0.8 )

[node name="Light2D" type="Light2D" parent="." index="5"]
position = Vector2( 0, -1 )
texture = ExtResource( 6 )
texture_scale = 1.75
energy = 0.95
shadow_filter = 3

[node name="Hitbox" parent="." index="6" instance=ExtResource( 7 )]
scale = Vector2( 3.5, 3.5 )
collision_layer = 8
collision_mask = 64
monitoring = false
monitorable = false
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" index="0"]
scale = Vector2( 0.01, 0.01 )
shape = SubResource( 34 )

[node name="Hurtbox" parent="." index="7" instance=ExtResource( 8 )]
collision_layer = 16
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 35 )

[node name="Timer" type="Timer" parent="Hurtbox" index="1"]

[node name="Node2D" type="Node2D" parent="." index="8"]
position = Vector2( -308, -172 )
z_index = 20

[node name="HealthBar" parent="Node2D" index="0" instance=ExtResource( 11 )]
anchor_right = 0.496
margin_right = 206.0
margin_bottom = 21.0

[node name="Stats" parent="." index="9" instance=ExtResource( 12 )]

[node name="PauseZ" type="Node2D" parent="." index="10"]
z_index = 20

[node name="Pause Menu" parent="PauseZ" index="0" instance=ExtResource( 10 )]

[node name="Ult_Timer" type="Timer" parent="." index="11"]
wait_time = 90.0
one_shot = true

[node name="RayCast2D" type="RayCast2D" parent="." index="12"]
enabled = true
cast_to = Vector2( -1, 82 )
collision_mask = 128
collide_with_areas = true

[node name="Timer" type="Timer" parent="." index="13"]

[node name="Timer2" type="Timer" parent="." index="14"]
wait_time = 0.528

[connection signal="area_entered" from="Hurtbox" to="Hurtbox" method="_on_Hurtbox_area_entered"]
[connection signal="invincibility_ended" from="Hurtbox" to="Hurtbox" method="_on_Hurtbox_invincibility_ended"]
[connection signal="invincibility_started" from="Hurtbox" to="Hurtbox" method="_on_Hurtbox_invincibility_started"]
[connection signal="timeout" from="Hurtbox/Timer" to="Hurtbox" method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
